--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,9 @@ body {
 .btn:hover {
     transform: scale(1.02);
 }
+h3 {
+    margin: 16px 0px 16px 0px;
+}
 header {
     background-color: #306bac;
     display: flex;
@@ -37,7 +40,6 @@ header {
     padding: 20px;
     background-color: #98b9f2;
     display: flex;
-    height: 75vh;
     /* justify-content: space-between; */
 }
 .container {
@@ -53,18 +55,18 @@ header {
     font-weight: bold;
 }
 .submitCard {
+    position: fixed;
+    top: 105%;
+    left: 35%;
     font-size: larger;
     z-index: 1;
     padding: 20px 50px 50px 50px;
     transform: translate(-50%, -50%) scale(0);
     background-color: #98b9f2;
     border: solid black 2px;
-    /* border: solid black 2px; */
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
     align-items: center;
-    /* height: 0%; */
     gap: 30px;
     align-self: center;
     display: none;
@@ -89,11 +91,12 @@ header {
 }
 .library {
     width: 100%;
+    /* height: 100vh; */
     /* border: solid black 1px; */
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    align-content: center;
+    justify-content:flex-start;
+    /* align-content:space-between; */
     padding-top: 20px;
     /* flex: 1, 1, 500px; */
 }
@@ -106,10 +109,20 @@ header {
     padding: 15px;
     text-align: center;
     /* gap: 20px; */
-    min-width: 15%;
+    min-width: 25%;
+    height: 230px;
+}
+.read {
+    margin-bottom: 12px;
+    margin-top: 5px;
+}
+.far {
+    padding: 5px 0px 5px 0px;
+    border: none;
+    width: auto;
 }
 .bookCard:hover {
-    transform: scale(1.1);
+    transform: scale(1.01);
 }
 footer {
     background-color: #141B41;
