--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,13 @@ body {
     /* align-items: ; */
 }
 .btn {
-    background-color: #6F9CEB;
+    background-color: #306bac;
     align-self: center;
     width: 100px;
     border: none;
     border: solid black 2px;
     padding: 2px;
+    border-radius: 5%;
 }
 .btn:hover {
     transform: scale(1.02);
@@ -21,7 +22,7 @@ h3 {
     margin: 16px 0px 16px 0px;
 }
 header {
-    background-color: #306bac;
+    background-color: #98b9f2;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -38,7 +39,7 @@ header {
 }
 .hero {
     padding: 20px;
-    background-color: #98b9f2;
+    background-color: white;
     display: flex;
     /* justify-content: space-between; */
 }
@@ -48,6 +49,7 @@ header {
     width: 100%;
 }
 .btn.add {
+    background-color: #306bac;
     /* padding: 50px */
     height: 75px;
     width: 150px;
@@ -55,6 +57,7 @@ header {
     font-weight: bold;
 }
 .submitCard {
+    border-radius: 5%;
     position: fixed;
     top: 105%;
     left: 35%;
@@ -62,7 +65,7 @@ header {
     z-index: 1;
     padding: 20px 50px 50px 50px;
     transform: translate(-50%, -50%) scale(0);
-    background-color: #98b9f2;
+    background-color: #306bac;
     border: solid black 2px;
     display: flex;
     flex-direction: column;
@@ -101,6 +104,7 @@ header {
     /* flex: 1, 1, 500px; */
 }
 .bookCard {
+    border-radius: 5%;
     box-shadow: 5px 5px 15px -7px #000000;
     margin: 10px;
     display: flex;
@@ -117,6 +121,7 @@ header {
     margin-top: 5px;
 }
 .far {
+    background-color: #6F9CEB;
     padding: 5px 0px 5px 0px;
     border: none;
     width: auto;
