--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     /* align-items: ; */
 }
 .btn {
-    background-color: #306bac;
+    background-color: #05668D;
     align-self: center;
     width: 100px;
     border: none;
@@ -18,11 +18,9 @@ body {
 .btn:hover {
     transform: scale(1.02);
 }
-h3 {
-    margin: 16px 0px 16px 0px;
-}
 header {
-    background-color: #98b9f2;
+    /* background-color: #98b9f2; */
+    background-color: #427AA1;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,10 +34,11 @@ header {
     /* box-shadow: 5px 5px 15px -5px #000000; */
     padding: 10px;
     border: solid black 3px;
+    background-color: lightgray;
 }
 .hero {
     padding: 20px;
-    background-color: white;
+    background-color: #EBF2FA;
     display: flex;
     /* justify-content: space-between; */
 }
@@ -49,7 +48,7 @@ header {
     width: 100%;
 }
 .btn.add {
-    background-color: #306bac;
+    /* background-color: #306bac; */
     /* padding: 50px */
     height: 75px;
     width: 150px;
@@ -109,19 +108,33 @@ header {
     margin: 10px;
     display: flex;
     flex-direction: column;
-    background-color: #6F9CEB;
-    padding: 15px;
+    /* background-color: #6F9CEB; */
+    background-color: #427AA1;
+    /* padding: 15px; */
     text-align: center;
     /* gap: 20px; */
     min-width: 25%;
-    height: 230px;
+    height: 250px;
+}
+h3 {
+    border-radius: 5%;
+    /* margin: 16px 0px 16px 0px; */
+    margin: 0px;
+    padding: 16px 0px 12px 0px;
+    /* background-color: white; */
+}
+.bookTitle {
+    background-color: lightgray;
+}
+.bookPageCount {
 }
 .read {
     margin-bottom: 12px;
     margin-top: 5px;
 }
 .far {
-    background-color: #6F9CEB;
+    /* background-color: #6F9CEB; */
+    background-color: #427AA1;
     padding: 5px 0px 5px 0px;
     border: none;
     width: auto;
