--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ header {
     flex-direction: column;
     /* background-color: #6F9CEB; */
     background-color: #427AA1;
+    justify-content: space-between;
     /* padding: 15px; */
     text-align: center;
     /* gap: 20px; */
