--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,10 @@ header {
     flex-direction: column;
     width: 100%;
 }
+#containerHeader {
+    position: relative;
+    left: 35%;    
+}
 .btn.add {
     /* background-color: #306bac; */
     /* padding: 50px */
@@ -122,7 +126,11 @@ header {
     /* padding: 15px; */
     text-align: center;
     /* gap: 20px; */
-    min-width: 25%;
+    /* min-width: 25%; */
+    /* max-width: 5%; */
+    flex-basis: 250px;
+    flex-grow: 0;
+    flex-shrink: 1;
     height: 250px;
 }
 h3 {
