--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
     /* align-items: ; */
 }
 #page-container {
-    z-index: 1;
     position: relative;
     min-height: 100vh;
     /* opacity: 0.2; */
@@ -94,7 +93,7 @@ header {
 .btn.submit {
     margin-top: 20px;
 }
-.active {
+.submitCard.active {
     transform: translate(0%, -130%) scale(1);
     display:flex;
 }
@@ -170,3 +169,17 @@ footer {
     width: 100%;
     height: 2.5em;
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 1;
+  }
+  .overlay.active {
+      display: block;
+  }
